Change a couple of import paths to work within engine. [#76484828]

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -44,4 +44,4 @@ $images_path: "/assets/catarse/"
 @import resources/channels/profile
 @import resources/channels/about
 
-@import ./jquery-ui
+@import jquery-ui
