--- a/app/assets/stylesheets/miv/_index.sass
+++ b/app/assets/stylesheets/miv/_index.sass
@@ -1,19 +1,21 @@
-@import colors
+// TODO: can we get relative imports working?
 
-@import flash
-@import locales
-@import overlay
+@import miv/colors
 
-@import projects
-@import projects_land
-@import embed
-@import tabs
-@import table
-@import alert
-@import form
-@import dropdown
-@import modal
-@import bootstrap
+@import miv/flash
+@import miv/locales
+@import miv/overlay
+
+@import miv/projects
+@import miv/projects_land
+@import miv/embed
+@import miv/tabs
+@import miv/table
+@import miv/alert
+@import miv/form
+@import miv/dropdown
+@import miv/modal
+@import miv/bootstrap
 
 .facebook_start
   margin-bottom: 40px !important
@@ -34,7 +36,7 @@
     +box-shadow(rgba(black,0.75) 0px 0px 5px inset !important)
   &:active
     +box-shadow(rgba(black, 1) 0px 0px 15px inset !important)
-    
+
 #announcement
   display: block
   padding: 10px
